--- a/ps5-rmarkdown.Rmd
+++ b/ps5-rmarkdown.Rmd
@@ -125,9 +125,15 @@ gapminder %>%
   knitr::kable()
 ```
 
-### Question 5 working on
+### Question 5
 ```{r}
-
+gapminder %>% 
+  filter(!is.na(co2_PC), !is.na(region)) %>% 
+  group_by(region, time) %>% 
+  summarize(avg_co2 = mean(co2_PC)) %>%
+  filter(time == "2016" | time == "1960") %>% 
+  ggplot() +
+  geom_bar(stat = "identity", aes(x = region, y = avg_co2, fill = as.factor(time)), position = "dodge")
 ```
 
 ### Question 6 working on
@@ -149,19 +155,8 @@ bottom3countries_co2_pc <- function(region_name){
     filter(region == region_name) %>% 
     group_by(name, region) %>% 
     summarize(avg_co2 = mean(co2_PC))  %>%
-    arrange(desc(avg_co2)) %>% 
-    tail(3)
-}
-region_names <- gapminder %>% 
-  filter(!is.na(region)) %>% 
-  group_by(region) %>% 
-  summarize(number_of_regions = n_distinct(region)) %>% 
-  c()
-for(i in 1:length(region_names$region)){
-  top3countries_co2_pc(region_names$region[[i]]) %>% 
-    knitr::kable()
-  bottom3countries_co2_pc(region_names$region[[i]]) %>% 
-    knitr::kable()
+    arrange((avg_co2)) %>% 
+    head(3)
 }
 ```
 
@@ -190,7 +185,55 @@ gapminder %>%
 ### Question 3
 Data from 2016 was used instead because 2019 data are all NAs. Observations about European countries and African countries have not changed and seem to fit the observation even more over the last 60 years. Asian countries also retain being the region with the most populated countries. The only difference is that there seem to be more countries in the figure now.
 
-### Question 4
+### Question 4 wokring on
 ```{r, message = FALSE}
 
 ```
+
+### Question 5 wokring on
+
+### Question 6
+```{r, message = FALSE}
+gapminder %>% 
+  filter(!is.na(GDP_PC), !is.na(time), !is.na(name), !is.na(region)) %>% 
+  filter(time == "1960" | time == "2019") %>% 
+  group_by(name, region, GDP_PC, time) %>% 
+  ggplot(aes(x = GDP_PC, fill = as.factor(time)))+
+  geom_histogram()
+```
+
+### Question 7
+```{r, message = FALSE}
+US_le_1960 <- gapminder %>% 
+  filter(!is.na(lifeExpectancy), !is.na(time), !is.na(name)) %>% 
+  filter(time == "1960") %>% 
+  select(time, name, lifeExpectancy) %>%
+  mutate(rank = rank(-lifeExpectancy)) %>% 
+  filter(name == "United States of America") %>% 
+  print.data.frame()
+
+US_le_2019 <- gapminder %>% 
+  filter(!is.na(lifeExpectancy), !is.na(time), !is.na(name)) %>% 
+  filter(time == "2019") %>% 
+  select(time, name, lifeExpectancy) %>%
+  mutate(rank = rank(-lifeExpectancy)) %>% 
+  filter(name == "United States of America") %>% 
+  print.data.frame()
+```
+US rank in life expectancy in 1960 was `r US_le_1960$rank` and in 2019 it was `r US_le_2019$rank`.
+
+### Question 8
+```{r, message = FALSE}
+countries_1960 <- gapminder %>% 
+  filter(!is.na(lifeExpectancy), !is.na(time), !is.na(name)) %>% 
+  filter(time == "1960") %>% 
+  summarize(total_countries = n_distinct(name))
+US_le_1960_relative <- US_le_1960$rank/countries_1960
+
+countries_2019 <- gapminder %>% 
+  filter(!is.na(lifeExpectancy), !is.na(time), !is.na(name)) %>% 
+  filter(time == "2019") %>% 
+  summarize(total_countries = n_distinct(name))
+US_le_2019_relative <- US_le_2019$rank/countries_2019
+```
+
