--- a/ps5-rmarkdown.Rmd
+++ b/ps5-rmarkdown.Rmd
@@ -82,6 +82,7 @@ gapminder %>%
   head(5) %>% 
   knitr::kable()
 ```
+1960 has the most missing data for co2 emissions.
 
 ### Question 2
 ```{r}
@@ -124,6 +125,7 @@ gapminder %>%
   filter(time == "2016" | time == "1960") %>% 
   knitr::kable()
 ```
+I see that in 2016 in all continents, their co2 emissions increased. However, the continent that has the highest overall is the Americas followed by Europe.
 
 ### Question 5
 ```{r}
@@ -136,7 +138,7 @@ gapminder %>%
   geom_bar(stat = "identity", aes(x = region, y = avg_co2, fill = as.factor(time)), position = "dodge")
 ```
 
-### Question 6 working on
+### Question 6
 ```{r, message = FALSE}
 top3countries_co2_pc <- function(region_name){
   gapminder %>% 
@@ -146,7 +148,8 @@ top3countries_co2_pc <- function(region_name){
     group_by(name, region) %>% 
     summarize(avg_co2 = mean(co2_PC))  %>%
     arrange(desc(avg_co2)) %>% 
-    head(3)
+    head(3) %>% 
+    knitr::kable()
 }
 bottom3countries_co2_pc <- function(region_name){
   gapminder %>% 
@@ -156,9 +159,26 @@ bottom3countries_co2_pc <- function(region_name){
     group_by(name, region) %>% 
     summarize(avg_co2 = mean(co2_PC))  %>%
     arrange((avg_co2)) %>% 
-    head(3)
+    head(3) %>% 
+    knitr::kable()
 }
+
+top3countries_co2_pc("Africa")
+bottom3countries_co2_pc("Africa")
+
+top3countries_co2_pc("Americas")
+bottom3countries_co2_pc("Americas")
+
+top3countries_co2_pc("Asia")
+bottom3countries_co2_pc("Asia")
+
+top3countries_co2_pc("Europe")
+bottom3countries_co2_pc("Europe")
+
+top3countries_co2_pc("Oceania")
+bottom3countries_co2_pc("Oceania")
 ```
+This is super inefficient but I couldn't get my pipe to work or a for loop and I ran out of time. 
 
 ## GDP per capita
 ### Question 1
@@ -185,12 +205,12 @@ gapminder %>%
 ### Question 3
 Data from 2016 was used instead because 2019 data are all NAs. Observations about European countries and African countries have not changed and seem to fit the observation even more over the last 60 years. Asian countries also retain being the region with the most populated countries. The only difference is that there seem to be more countries in the figure now.
 
-### Question 4 wokring on
+### Question 4 working on
 ```{r, message = FALSE}
 
 ```
 
-### Question 5 wokring on
+### Question 5 working on
 
 ### Question 6
 ```{r, message = FALSE}
@@ -228,12 +248,12 @@ countries_1960 <- gapminder %>%
   filter(!is.na(lifeExpectancy), !is.na(time), !is.na(name)) %>% 
   filter(time == "1960") %>% 
   summarize(total_countries = n_distinct(name))
-US_le_1960_relative <- US_le_1960$rank/countries_1960
+US_le_1960_relative <- round((US_le_1960$rank/countries_1960), 2)
 
 countries_2019 <- gapminder %>% 
   filter(!is.na(lifeExpectancy), !is.na(time), !is.na(name)) %>% 
   filter(time == "2019") %>% 
   summarize(total_countries = n_distinct(name))
-US_le_2019_relative <- US_le_2019$rank/countries_2019
+US_le_2019_relative <- round((US_le_2019$rank/countries_2019), 2)
 ```
-
+US rank in life expectancy rank in 1960 was `r US_le_1960_relative` and in 2019 it was `r US_le_2019_relative`.
